--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
 main.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Task Management</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Display</h1>
+    <h2></h2>
+    <h3>Feature Request</h3>
+
+    <div class="status">
+        <h3>Todo</h3>
+        <ul>
+            <li><strong>CAM-S:</strong> Add Multi-Language Support <div class="description">Enable multi-language support within the application</div></li>
+            <li><strong>CAM-2:</strong> Implement Email Notification System</li>
+            <li><strong>CAM-6:</strong> Create Onboarding Tutorial for New Users</li>
+            <li><strong>CAM-11:</strong> Conduct Security Vulnerability Assessment</li>
+            <li><strong>CAM-?:</strong> Integrate Third-Party Payment Gateway</li>
+            <li><strong>CAM-1:</strong> Update User Profile Page UI</li>
+        </ul>
+    </div>
+
+    <div class="status">
+        <h3>In Progress</h3>
+        <ul>
+            <li><strong>CAM-3:</strong> Optimize Database Queries for Performance</li>
+        </ul>
+    </div>
+
+    <div class="status">
+        <h3>Done</h3>
+        <ul>
+            <li><strong>CAM-4:</strong> Enhance Search Functionality</li>
+            <li><strong>CAM:</strong> Upgrade Server Infrastructure</li>
+            <li><strong>CAM:</strong> Implement Role-Based Access Control (RBAC)</li>
+        </ul>
+    </div>
+</body>
+</html>
