--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@ main.html
     <div class="status">
         <h3>Todo</h3>
         <ul>
-            <li><strong>CAM-S:</strong> Add Multi-Language Support <div class="description">Enable multi-language support within the application</div></li>
+            <li><strong>CAM-5:</strong> Add Multi-Language Support <div class="description">Enable multi-language support within the application</div></li>
             <li><strong>CAM-2:</strong> Implement Email Notification System</li>
-            <li><strong>CAM-6:</strong> Create Onboarding Tutorial for New Users</li>
+            <li><strong>CAM-8:</strong> Create Onboarding Tutorial for New Users</li>
             <li><strong>CAM-11:</strong> Conduct Security Vulnerability Assessment</li>
-            <li><strong>CAM-?:</strong> Integrate Third-Party Payment Gateway</li>
             <li><strong>CAM-1:</strong> Update User Profile Page UI</li>
         </ul>
     </div>
@@ -35,8 +34,9 @@ main.html
         <h3>Done</h3>
         <ul>
             <li><strong>CAM-4:</strong> Enhance Search Functionality</li>
-            <li><strong>CAM:</strong> Upgrade Server Infrastructure</li>
-            <li><strong>CAM:</strong> Implement Role-Based Access Control (RBAC)</li>
+            <li><strong>CAM-7:</strong> Integrate Third-Party Payment Gateway</li>
+            <li><strong>CAM:10</strong> Upgrade Server Infrastructure</li>
+            <li><strong>CAM:9</strong> Implement Role-Based Access Control (RBAC)</li>
         </ul>
     </div>
 </body>
