--- a/group.html
+++ b/group.html
@@ -1,4 +1,4 @@
-main.html
+grouping by priority is selected
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -121,5 +121,4 @@ main.html
         </div>
     </div>
 </body>
-</html>
-
+</html
