--- a/group index.html
+++ b/group index.html
@@ -1,5 +1,5 @@
-grouping by priority is selected
-<!DOCTYPE html>
+html main group
+  <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -122,3 +122,4 @@ grouping by priority is selected
     </div>
 </body>
 </html
+
